syntax = "proto3";

package master;

// Worker registration service
service RegisterService {
  rpc RegisterWorker (WorkerInfo) returns (RegisterWorkerResponse) {}
}

// Sampling service for key distribution
service SamplingService {
  rpc Sampling (SampleData) returns (SampleResponse) {}
}

// Synchronization and shuffle coordination service
service SyncAndShuffleService {
  rpc ReportSyncCompletion (SyncPhaseReport) returns (SyncPhaseAck) {}
}

// Final merge completion service
service FinalMergeService {
  rpc ReportFinalMergeCompletion (FinalMergePhaseReport) returns (FinalMergePhaseAck) {}
}

// Worker information sent during registration
message WorkerInfo {
  string ip = 1;
  int32 port = 2;
  int64 ram_mb = 3;  // RAM capacity in MB
}

// Response from master after worker registration
message RegisterWorkerResponse {
  bool success = 1;
}

// Sampled keys sent from worker to master
message SampleData {
  string worker_ip = 1;
  repeated bytes keys = 2;  // 10-byte keys
}

// Response from master after receiving samples
message SampleResponse {
  bool success = 1;
}

// Report message for synchronization phase completion
message SyncPhaseReport {
  string worker_ip = 1;
}

message SyncPhaseAck {
  bool success = 1;
}

// Report message for final merge phase completion
message FinalMergePhaseReport {
  string worker_ip = 1;
}

message FinalMergePhaseAck {
  bool success = 1;
}